--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   body{font-family:system-ui, Arial, sans-serif; background:#F9FAFB; color:var(--text); margin:0}
   .container{width:100%; margin:0; padding:24px var(--pad)}
 
-  .h1, .h1, .h1, h1 {
+  .h1, h1 {
   font-size:20pt;
   margin:0 0 8px 0;
   line-height:1.2;
-  font-weight:1000;   /* updated to heavy weight */
+  font-weight:900;   /* updated to heavy weight */
   color:#444;         /* unified dark gray */
 }
   .subheader{
@@ -70,8 +70,8 @@
   button{width:120px; height:42px; font-size:12pt; border:none; border-radius:14px; text-align:center;}
 button:enabled{background:var(--blue); color:#fff; cursor:pointer;}
 button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
-button:enabled{background:var(--blue); color:#fff; cursor:pointer;}
-button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
+
+
   .btn-secondary{width:120px; height:42px; font-size:12pt;}
 
   /* QUESTIONS */
@@ -207,6 +207,90 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
   .score-section{margin-top:40px;}
 
   .group-row{padding:2px 0; margin-bottom:0;}
+
+/* Phase A, Step 1 final refinement — only horizontal light blue lines */
+@media print {
+  #pdfReport table, 
+  #pdfReport th, 
+  #pdfReport td {
+    border: none !important; /* remove all borders completely */
+  }
+  #pdfReport td {
+    border-bottom: 0.5px solid #87CEFA !important; /* thin light blue horizontal line only */
+  }
+  #pdfReport tr:last-child td {
+    border-bottom: none !important;
+  }
+}
+
+/* Phase A — Side borders removal (print only) */
+@media print {
+  /* Kill any container/card borders or shadows */
+  #pdfReport .card { border: 0 !important; box-shadow: none !important; }
+  /* Ensure no table frame borders */
+  #pdfReport table { 
+    border: 0 !important; 
+    border-left: 0 !important; 
+    border-right: 0 !important; 
+    border-top: 0 !important; 
+    border-bottom: 0 !important;
+    border-collapse: collapse !important;
+  }
+  /* Ensure no vertical borders on cells */
+  #pdfReport th, 
+  #pdfReport td {
+    border-left: 0 !important;
+    border-right: 0 !important;
+  }
+  /* Keep only horizontal light-blue separators */
+  #pdfReport td { border-bottom: 0.5px solid #87CEFA !important; }
+  #pdfReport tr:last-child td { border-bottom: none !important; }
+}
+
+/* Phase A — Set default print page size to A4 */
+@media print {
+  @page {
+    size: A4;
+    margin: 15mm;
+  }
+}
+
+/* PDF: dual header for personal/peer information */
+@media print {
+  #pdfReport .info-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #pdfReport .info-bar span { flex: 1; }
+  #pdfReport .info-bar .peer-label { text-align: right; }
+}
+
+/* PDF: align PERSONAL/PEER headers exactly over their columns */
+@media print {
+  #pdfReport .info-bar {
+    display: grid !important;
+    grid-template-columns: 1fr 1fr; /* two equal columns to match info grid */
+    justify-content: initial !important;
+    align-items: center;
+  }
+  #pdfReport .info-bar span {
+    text-align: left !important;
+  }
+  #pdfReport .info-bar .peer-label {
+    justify-self: start; /* left-align in its grid cell */
+    margin-left: 0;
+    padding-left: 0;
+  }
+}
+
+/* PDF: remove duplicated sub-headers beneath the PERSONAL/PEER blue bar */
+@media print {
+  /* Hide the small 'Personal Information' / 'Peer Information' labels inside the cards */
+  #pdfReport .info-grid .sub-h { display: none !important; }
+  /* Optional: tighten spacing now that sub-headers are gone */
+  #pdfReport .info-grid .card { padding-top: 8px; }
+}
 </style>
 <script id="embeddedQuestions" type="application/json">[]</script>
 </head>
@@ -341,7 +425,7 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
 </div>
 </div>
 <div class="pdf-divider"></div>
-<div class="sec-h">INFORMATION</div>
+<div class="sec-h info-bar"><span>PERSONAL INFORMATION</span><span class="peer-label">PEER INFORMATION</span></div>
 <div class="info-grid">
 <div>
 <div class="sub-h">PERSONAL INFORMATION</div>
@@ -363,13 +447,7 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
 <div class="sec-h">ASSESSMENT</div>
 <div class="card" style="padding:0">
 <table>
-<thead>
-<tr>
-<th>RESULTS BY GROUP</th>
-<th>%</th>
-<th>DESCRIPTION</th>
-</tr>
-</thead>
+
 <tbody id="pdfGroupRows">
 <!-- rows injected -->
 </tbody>
@@ -573,10 +651,34 @@ else rec='Excellent! Your understanding of BED is an inspiration for others. Con
   }
 
   function buildPdfReport(){
-  try{ var el = document.getElementById('pdfReport'); if(el) el.innerHTML = ''; }catch(e){}
-}
-try{ window.buildPdfReport = buildPdfReport; }catch(e){}
-);
+    // Date + score box
+    const totals = computeTotals();
+    document.getElementById('pdfDate').textContent = 'Assessment Date ' + formatDate();
+    document.getElementById('pdfTotalPct').textContent = (isFinite(totals.pct) ? totals.pct : '—') + '%';
+    document.getElementById('pdfTotalRaw').textContent = (totals.raw||0) + ' OUT OF ' + ((S.questions||[]).length * 5 || 175);
+
+    // Info
+    document.getElementById('pdfEmpName').textContent = document.getElementById('nick').value || '';
+    document.getElementById('pdfEmpEmail').textContent = document.getElementById('email').value || '';
+    document.getElementById('pdfEmpHotel').textContent = document.getElementById('hotel').value || '';
+    document.getElementById('pdfPeerName').textContent = document.getElementById('peerName').value || '';
+    document.getElementById('pdfPeerEmail').textContent = document.getElementById('peerEmail').value || '';
+    document.getElementById('pdfPeerHotel').textContent = document.getElementById('peerHotel').value || '';
+
+    // Group rows
+    const gp = computeGroupPercents();
+    const descMap = groupDescMap();
+    const order = ["Hospitality Skills","Hospitality Competencies","Taking Ownership","Collaboration"];
+    const body = document.getElementById('pdfGroupRows');
+    body.innerHTML='';
+    order.forEach(name=>{
+      const tr = document.createElement('tr');
+      const tdName = document.createElement('td'); tdName.textContent = 'Score ' + name;
+      const tdPct = document.createElement('td'); tdPct.textContent = (gp[name] != null ? gp[name] : '—') + '%';
+      const tdDesc = document.createElement('td'); tdDesc.textContent = descMap[name] || '(add description)';
+      tr.appendChild(tdName); tr.appendChild(tdPct); tr.appendChild(tdDesc);
+      body.appendChild(tr);
+    });
 
     // Statements table
     const tb = document.querySelector('#pdfStatements tbody');
@@ -600,5 +702,201 @@ try{ window.buildPdfReport = buildPdfReport; }catch(e){}
   loadQuestions();
 })(); 
 </script>
+
+<script>
+// === Validation patch v2 (uses window.__S) ===
+(function(){
+  function Sref(){ return (window.__S || window.S || {}); }
+  function qIdsFor(range){
+    var S = Sref();
+    if(!Array.isArray(S.questions)) return [];
+    return S.questions.slice(range[0], range[1]).map(function(q){ return q.id; });
+  }
+  function allAnswered(ids){
+    var S = Sref();
+    if(!ids.length) return false;
+    return ids.every(function(id){ return S.answers && S.answers[id] != null; });
+  }
+  function isQ1Complete(){ return allAnswered(qIdsFor([0,18])); }
+  function isQ2Complete(){ return allAnswered(qIdsFor([18,35])); }
+
+  // Hook pill clicks to re-evaluate states
+  document.addEventListener('click', function(ev){
+    var t = ev.target;
+    if(t && t.classList && t.classList.contains('pill')){
+      var b1 = document.getElementById('toQ2');
+      if(b1) b1.disabled = !isQ1Complete();
+      var b2 = document.getElementById('submitAll');
+      if(b2) b2.disabled = !isQ2Complete();
+    }
+  }, true);
+
+  // After entering Q1/Q2, sync button states
+  var toQ1 = document.getElementById('toQ1');
+  if(toQ1){
+    var prevToQ1 = toQ1.onclick;
+    toQ1.onclick = function(){
+      if(typeof prevToQ1 === 'function') prevToQ1();
+      var b1 = document.getElementById('toQ2');
+      if(b1) b1.disabled = !isQ1Complete();
+    };
+  }
+
+  var toQ2 = document.getElementById('toQ2');
+  if(toQ2){
+    var prevToQ2 = toQ2.onclick;
+    toQ2.onclick = function(){
+      if(typeof prevToQ2 === 'function') prevToQ2();
+      var sub = document.getElementById('submitAll');
+      if(sub) sub.disabled = !isQ2Complete();
+    };
+  }
+
+  // Hard guard against advancing when incomplete
+  document.addEventListener('click', function(ev){
+    var id = ev.target && ev.target.id;
+    if(id === 'toQ2' && !isQ1Complete()){ ev.preventDefault(); ev.stopPropagation(); }
+    if(id === 'submitAll' && !isQ2Complete()){ ev.preventDefault(); ev.stopPropagation(); }
+  }, true);
+})();
+// === End patch ===
+</script>
+
+
+<script>
+// === Validation patch v3: robust state sync for Next/Submit ===
+(function(){
+  function Sref(){ return (window.__S || window.S || {}); }
+  function qIdsFor(range){
+    var S = Sref();
+    if(!Array.isArray(S.questions)) return [];
+    return S.questions.slice(range[0], range[1]).map(function(q){ return q.id; });
+  }
+  function allAnswered(ids){
+    var S = Sref();
+    if(!ids.length) return false;
+    return ids.every(function(id){ return S.answers && S.answers[id] != null; });
+  }
+  function isQ1Complete(){ return allAnswered(qIdsFor([0,18])); }
+  function isQ2Complete(){ return allAnswered(qIdsFor([18,35])); }
+
+  function setState(){
+    try{
+      var q1Visible = document.getElementById('q1') && document.getElementById('q1').style.display !== 'none';
+      var q2Visible = document.getElementById('q2') && document.getElementById('q2').style.display !== 'none';
+      var b1 = document.getElementById('toQ2');
+      if(b1 && q1Visible) b1.disabled = !isQ1Complete();
+      var b2 = document.getElementById('submitAll');
+      if(b2 && q2Visible) b2.disabled = !isQ2Complete();
+    }catch(_){}
+  }
+
+  // Hook pill clicks to re-evaluate states
+  document.addEventListener('click', function(ev){
+    var t = ev.target;
+    if(t && t.classList && t.classList.contains('pill')){
+      setState();
+    }
+  }, true);
+
+  // After entering Q1/Q2, sync button states
+  var toQ1 = document.getElementById('toQ1');
+  if(toQ1){
+    var prevToQ1 = toQ1.onclick;
+    toQ1.onclick = function(){
+      if(typeof prevToQ1 === 'function') prevToQ1();
+      setState();
+    };
+  }
+
+  var toQ2 = document.getElementById('toQ2');
+  if(toQ2){
+    var prevToQ2 = toQ2.onclick;
+    toQ2.onclick = function(){
+      if(typeof prevToQ2 === 'function') prevToQ2();
+      setState();
+    };
+  }
+
+  // Wrap show() to always refresh states after page changes (without touching visuals)
+  if(typeof window.show === 'function'){
+    var oldShow = window.show;
+    window.show = function(id){
+      oldShow(id);
+      setState();
+    };
+  }
+
+  // Hard guard against advancing when incomplete
+  document.addEventListener('click', function(ev){
+    var id = ev.target && ev.target.id;
+    if(id === 'toQ2' && !isQ1Complete()){ ev.preventDefault(); ev.stopPropagation(); }
+    if(id === 'submitAll' && !isQ2Complete()){ ev.preventDefault(); ev.stopPropagation(); }
+  }, true);
+
+  // Initial sync
+  document.addEventListener('DOMContentLoaded', setState);
+  setTimeout(setState, 0);
+})();
+// === End patch v3 ===
+</script>
+
+
+<script>
+// === Validation patch v4: DOM-based completion (resilient) ===
+(function(){
+  function uniqueAnsweredCount(containerId){
+    var box = document.getElementById(containerId);
+    if(!box) return 0;
+    var items = box.querySelectorAll('.q-item');
+    var answered = 0;
+    items.forEach(function(it){
+      if(it.querySelector('.pill.selected')) answered++;
+    });
+    return answered;
+  }
+  function q1Done(){ return uniqueAnsweredCount('list-q1') >= 18; }
+  function q2Done(){ return uniqueAnsweredCount('list-q2') >= 17; }
+
+  function sync(){
+    try{
+      var q1Visible = document.getElementById('q1') && document.getElementById('q1').style.display !== 'none';
+      var q2Visible = document.getElementById('q2') && document.getElementById('q2').style.display !== 'none';
+      var b1 = document.getElementById('toQ2');
+      if(b1 && q1Visible) b1.disabled = !q1Done();
+      var b2 = document.getElementById('submitAll');
+      if(b2 && q2Visible) b2.disabled = !q2Done();
+    }catch(_){}
+  }
+
+  // Monitor pill clicks
+  document.addEventListener('click', function(ev){
+    var t = ev.target;
+    if(t && t.classList && t.classList.contains('pill')){
+      // Wait a tick for .selected class to update, then sync
+      setTimeout(sync, 0);
+    }
+  }, true);
+
+  // Wrap show() to re-sync after page changes
+  if(typeof window.show === 'function'){
+    var oldShow = window.show;
+    window.show = function(id){ oldShow(id); setTimeout(sync, 0); };
+  }
+
+  // Hard guard
+  document.addEventListener('click', function(ev){
+    var id = ev.target && ev.target.id;
+    if(id === 'toQ2' && !q1Done()){ ev.preventDefault(); ev.stopPropagation(); }
+    if(id === 'submitAll' && !q2Done()){ ev.preventDefault(); ev.stopPropagation(); }
+  }, true);
+
+  // Initial sync
+  document.addEventListener('DOMContentLoaded', function(){ setTimeout(sync, 0); });
+  setTimeout(sync, 50);
+})();
+// === End patch v4 ===
+</script>
+
 </body>
 </html>
