--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 <html lang="en">
 <head>
+&lt;!-- ===== LOCKED BASELINE v72-LOCK =====
+Do not edit above this line.
+All overrides (v69, v70, v72) are consolidated here.
+--&gt;
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>BED HOSPITALITY — Self-Assessment</title>
@@ -291,9 +295,266 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
   /* Optional: tighten spacing now that sub-headers are gone */
   #pdfReport .info-grid .card { padding-top: 8px; }
 }
+
+/* PDF: add horizontal blue lines inside the Personal/Peer info cards */
+@media print {
+  /* Apply thin light-blue separators to each row-like child within the info cards */
+  #pdfReport .info-grid .card > * {
+    border-bottom: 0.5px solid #87CEFA !important;
+  }
+  #pdfReport .info-grid .card > *:last-child {
+    border-bottom: none !important;
+  }
+  /* In case rows are wrapped in <p> or <div> inside a wrapper, cover common row classes */
+  #pdfReport .info-grid .card .row,
+  #pdfReport .info-grid .card .kv,
+  #pdfReport .info-grid .card .kv-row,
+  #pdfReport .info-grid .card p {
+    border-bottom: 0.5px solid #87CEFA !important;
+  }
+  #pdfReport .info-grid .card .row:last-child,
+  #pdfReport .info-grid .card .kv:last-child,
+  #pdfReport .info-grid .card .kv-row:last-child,
+  #pdfReport .info-grid .card p:last-child {
+    border-bottom: none !important;
+  }
+}
+
+/* PDF: Assessment header bar with three labels aligned to table columns */
+@media print {
+  #pdfReport .assess-bar{
+    display:grid;
+    grid-template-columns: 2fr 0.6fr 3fr; /* match group / % / description proportions */
+    column-gap: 0;
+    align-items: center;
+  }
+  #pdfReport .assess-bar .lbl-group{ text-align:left; }
+  #pdfReport .assess-bar .lbl-pct{ text-align:center; }
+  #pdfReport .assess-bar .lbl-desc{ text-align:left; }
+}
+
+/* PDF: lock Statements table column widths */
+@media print {
+  #pdfReport .statements-table { table-layout: fixed; width: 100%; }
+  #pdfReport .statements-table col:nth-child(1) { width: 10%; }
+  #pdfReport .statements-table col:nth-child(2) { width: 50%; }
+  #pdfReport .statements-table col:nth-child(3) { width: 20%; }
+  #pdfReport .statements-table col:nth-child(4) { width: 20%; }
+}
+
+/* PDF: lock Information section to 20/30/20/30 total width */
+@media print {
+  /* Ensure the whole info section spans exactly the report width */
+  #pdfReport .info-grid {
+    display: grid !important;
+    grid-template-columns: 50% 50%; /* two cards side-by-side => total 100% */
+    width: 100% !important;
+    gap: 0 0; /* avoid extra horizontal spacing */
+  }
+  /* Inside each card: labels 40%, fields 60% -> combined = 20%/30% of total */
+  #pdfReport .info-grid .card {
+    display: grid !important;
+    grid-template-columns: 40% 60%;
+    box-sizing: border-box;
+    width: 100%;
+    border: 0 !important; /* keep no card borders in print */
+    box-shadow: none !important;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+  /* Label cells left column, field cells right column */
+  #pdfReport .info-grid .card .label,
+  #pdfReport .info-grid .card .kv-label { grid-column: 1; text-align: left; }
+  #pdfReport .info-grid .card .value,
+  #pdfReport .info-grid .card .kv-value { grid-column: 2; text-align: left; }
+
+  /* Make sure rows align and wrap properly */
+  #pdfReport .info-grid .card > * {
+    break-inside: avoid;
+  }
+}
+
+/* PDF: lock Statements table columns to 10/45/30/15 */
+@media print {
+  #pdfReport .statements-table { table-layout: fixed; width: 100%; }
+  #pdfReport .statements-table col:nth-child(1) { width: 10%; }
+  #pdfReport .statements-table col:nth-child(2) { width: 45%; }
+  #pdfReport .statements-table col:nth-child(3) { width: 30%; }
+  #pdfReport .statements-table col:nth-child(4) { width: 15%; }
+}
+
+/* PDF: Statements header bar with STATEMENTS, GROUP, SCORE */
+@media print {
+  #pdfReport .statements-bar {
+    display: grid;
+    grid-template-columns: 10% 45% 30% 15%; /* NO / STATEMENT / GROUP / RATING */
+    align-items: center;
+  }
+  #pdfReport .statements-bar .lbl-stmt { grid-column: 2; text-align: left; }
+  #pdfReport .statements-bar .lbl-group { grid-column: 3; text-align: left; }
+  #pdfReport .statements-bar .lbl-score { grid-column: 4; text-align: center; }
+}
+
+/* PDF: Refine Statements section alignment */
+@media print {
+  /* Header bar grid still uses locked column widths */
+  #pdfReport .statements-bar {
+    display: grid;
+    grid-template-columns: 10% 45% 30% 15%;
+    align-items: center;
+  }
+  /* Align STATEMENTS over NO column (left with numbers) */
+  #pdfReport .statements-bar .lbl-stmt { grid-column: 1; text-align: left; }
+  /* Align GROUP over Group col, left aligned */
+  #pdfReport .statements-bar .lbl-group { grid-column: 3; text-align: left; }
+  /* Align SCORE over Score col, centered */
+  #pdfReport .statements-bar .lbl-score { grid-column: 4; text-align: center; }
+
+  /* Body cells alignment */
+  #pdfReport .statements-table td:nth-child(1) { text-align: left; }   /* NO. */
+  #pdfReport .statements-table td:nth-child(2) { text-align: left; }   /* STATEMENT text */
+  #pdfReport .statements-table td:nth-child(3) { text-align: left; }   /* GROUP values */
+  #pdfReport .statements-table td:nth-child(4) { text-align: center; } /* SCORE values */
+}
+
+/* PDF: Fine-tune Statements section header alignment and hide duplicate header rows */
+@media print {
+  /* Normalize padding for the header bar to align with table columns */
+  #pdfReport .statements-bar {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+  #pdfReport .statements-bar span {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+
+  /* Reaffirm grid alignment */
+  #pdfReport .statements-bar {
+    display: grid;
+    grid-template-columns: 10% 45% 30% 15%;
+    align-items: center;
+  }
+  #pdfReport .statements-bar .lbl-stmt { grid-column: 1; text-align: left; }
+  #pdfReport .statements-bar .lbl-group { grid-column: 3; text-align: left; }
+  #pdfReport .statements-bar .lbl-score { grid-column: 4; text-align: center; }
+
+  /* Body cells alignment */
+  #pdfReport .statements-table td:nth-child(1) { text-align: left; }
+  #pdfReport .statements-table td:nth-child(2) { text-align: left; }
+  #pdfReport .statements-table td:nth-child(3) { text-align: left; }
+  #pdfReport .statements-table td:nth-child(4) { text-align: center; }
+
+  /* Hide any residual header row (NO/STATEMENT/GROUP/RATING) */
+  #pdfReport .statements-table thead,
+  #pdfReport .statements-table tr:first-child th {
+    display: none !important;
+  }
+  #pdfReport .statements-table tr:first-child td {
+    display: none !important;
+  }
+}
+
+/* PDF: Information section row vertical centering and remove bold labels */
+@media print {
+  /* Vertically center each row in the Personal/Peer cards */
+  #pdfReport .info-grid .card > * {
+    display: flex !important;
+    align-items: center !important;
+    line-height: 1.3;
+  }
+  /* Remove bold from labels in Information section */
+  #pdfReport .info-grid .card .label,
+  #pdfReport .info-grid .card .kv-label,
+  #pdfReport .info-grid .card .label b,
+  #pdfReport .info-grid .card .label strong,
+  #pdfReport .info-grid .card .kv-label b,
+  #pdfReport .info-grid .card .kv-label strong {
+    font-weight: 400 !important;
+  }
+}
 </style>
 <script id="embeddedQuestions" type="application/json">[]</script>
-</head>
+<style>
+/* === FINAL fixes v68: Statements duplicate header removal + header alignment (print only) === */
+@media print {
+  /* Lock one set of column widths for statements table */
+  #pdfReport #pdfStatements { table-layout: fixed; width: 100%; }
+  #pdfReport #pdfStatements col:nth-child(1) { width: 10% !important; }
+  #pdfReport #pdfStatements col:nth-child(2) { width: 45% !important; }
+  #pdfReport #pdfStatements col:nth-child(3) { width: 30% !important; }
+  #pdfReport #pdfStatements col:nth-child(4) { width: 15% !important; }
+
+  /* Align blue header bar labels with table columns */
+  #pdfReport .statements-bar {
+    display: grid !important;
+    grid-template-columns: 10% 45% 30% 15% !important; /* NO / STATEMENT / GROUP / RATING */
+    column-gap: 0 !important;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+  #pdfReport .statements-bar .lbl-stmt { grid-column: 2 !important; text-align: left !important; }
+  #pdfReport .statements-bar .lbl-group { grid-column: 3 !important; text-align: left !important; }
+  #pdfReport .statements-bar .lbl-score { grid-column: 4 !important; text-align: center !important; }
+
+  /* Hide the table's header row to avoid duplication under the blue bar */
+  #pdfReport #pdfStatements thead,
+  #pdfReport #pdfStatements thead tr,
+  #pdfReport #pdfStatements thead th {
+    display: none !important;
+  }
+}
+</style><style>
+/* === FINAL fixes v69: Information section row alignment + unbold labels (screen + print) === */
+#pdfReport .info-grid .fields { align-items: center !important; }
+#pdfReport .info-grid .fields label { font-weight: 400 !important; }
+</style><style>
+/* === FINAL fixes v70: Blue section header alignment (screen + print) === */
+#pdfReport .statements-bar {
+  display: grid !important;
+  grid-template-columns: 10% 45% 30% 15% !important; /* NO. | STATEMENT | GROUP | SCORE */
+  column-gap: 0 !important;
+  align-items: center !important;
+}
+/* 1) "STATEMENTS" label aligns from the very left of the number column (No.) */
+#pdfReport .statements-bar .lbl-stmt {
+  grid-column: 1 / span 2 !important; /* occupy No. + Statement columns so left edge aligns with numbers */
+  justify-self: start !important;
+  text-align: left !important;
+}
+/* 2) "GROUP" left-aligned with its data column */
+#pdfReport .statements-bar .lbl-group {
+  grid-column: 3 !important;
+  justify-self: start !important;
+  text-align: left !important;
+}
+/* 3) Entire SCORE column centered */
+#pdfReport .statements-bar .lbl-score {
+  grid-column: 4 !important;
+  justify-self: center !important;
+  text-align: center !important;
+}
+#pdfReport #pdfStatements td:nth-child(4),
+#pdfReport #pdfStatements th:nth-child(4) {
+  text-align: center !important;
+}
+</style><style>
+/* === FINAL fixes v71: Match blue header height for STATEMENTS to other bars (print) === */
+@media print {
+  #pdfReport .statements-bar {
+    padding: 6px 10px !important; /* same as .sec-h default */
+    margin: 16px 0 8px 0 !important; /* restore standard sec-h margins for visual consistency */
+  }
+}
+</style><style>
+/* === FINAL fixes v72: Match blue header height for STATEMENTS to other bars (screen + print) === */
+#pdfReport .statements-bar {
+  padding: 6px 10px !important; /* same as .sec-h default */
+  margin: 16px 0 8px 0 !important;
+}
+</style></head>
 <body>
 <main class="container">
 <h1>BED HOSPITALITY 2.0</h1>
@@ -444,16 +705,15 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
 </div>
 </div>
 </div>
-<div class="sec-h">ASSESSMENT</div>
+<div class="sec-h assess-bar"><span class="lbl-group">SCORE BY GROUP</span><span class="lbl-pct">%</span><span class="lbl-desc">DESCRIPTION</span></div>
 <div class="card" style="padding:0">
 <table>
-
 <tbody id="pdfGroupRows">
 <!-- rows injected -->
 </tbody>
 </table>
 </div>
-<div class="sec-h">STATEMENTS</div>
+<div class="sec-h statements-bar"><span class="lbl-stmt">STATEMENTS</span><span class="lbl-group">GROUP</span><span class="lbl-score">SCORE</span></div>
 <div class="card" style="padding:0">
 <table id="pdfStatements">
 <thead>
@@ -702,7 +962,6 @@ else rec='Excellent! Your understanding of BED is an inspiration for others. Con
   loadQuestions();
 })(); 
 </script>
-
 <script>
 // === Validation patch v2 (uses window.__S) ===
 (function(){
@@ -761,8 +1020,6 @@ else rec='Excellent! Your understanding of BED is an inspiration for others. Con
 })();
 // === End patch ===
 </script>
-
-
 <script>
 // === Validation patch v3: robust state sync for Next/Submit ===
 (function(){
@@ -840,8 +1097,6 @@ else rec='Excellent! Your understanding of BED is an inspiration for others. Con
 })();
 // === End patch v3 ===
 </script>
-
-
 <script>
 // === Validation patch v4: DOM-based completion (resilient) ===
 (function(){
@@ -897,6 +1152,22 @@ else rec='Excellent! Your understanding of BED is an inspiration for others. Con
 })();
 // === End patch v4 ===
 </script>
-
-</body>
+<script>
+(function(){
+  var bar = document.querySelector('#pdfReport .statements-bar');
+  if(!bar) return;
+  var labelStmt = bar.querySelector('.lbl-stmt');
+  if(labelStmt){
+    labelStmt.textContent = 'STATEMENTS';
+  }
+  var labelGroup = bar.querySelector('.lbl-group');
+  if(labelGroup){
+    labelGroup.textContent = 'GROUP';
+  }
+  var labelScore = bar.querySelector('.lbl-score');
+  if(labelScore){
+    labelScore.textContent = 'SCORE';
+  }
+})();
+</script></body>
 </html>
