--- a/index.html
+++ b/index.html
@@ -717,28 +717,17 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
       S.questions = data.questions || [];
       S.groups = data.groups || [];
     }catch(e){
-      S.questions = [];
+      S.questions = []; 
       S.groups = [
         {"name":"Hospitality Skills","description":"Basic service skills for daily tasks and guest care."},
         {"name":"Hospitality Competencies","description":"Advanced ability to read people and situations."},
         {"name":"Taking Ownership","description":"Acting independently and sharing responsibility."},
         {"name":"Collaboration","description":"Building trust and helping across the BED community."}
       ];
-      // Show a visible banner so the user knows the JSON is missing
-      (function(){
-        var host = document.getElementById('welcome') || document.body;
-        var banner = document.getElementById('jsonErrBanner');
-        if(!banner){
-          banner = document.createElement('div');
-          banner.id = 'jsonErrBanner';
-          banner.style.cssText = 'background:#fff4e5;color:#8a4b00;border:1px solid #f1c48b;padding:10px 12px;margin:10px 0;border-radius:8px;font-size:14px;';
-          banner.textContent = '⚠ Could not load questions.json. Please place questions.json in the same folder as this HTML and reload.';
-          host.insertBefore(banner, host.firstChild);
-        }
-      })();
     }
   }
-function validateWelcome() {
+
+  function validateWelcome() {
     const allFilled = ['nick','email','hotel','peerName','peerEmail','peerHotel'].every(id => el(id).value && el(id).value.trim()!=='');
     el('toInstructions').disabled = !allFilled;
   }
@@ -806,7 +795,7 @@ function validateWelcome() {
     _eligCancelBtn.onclick = () => { closeModal(); _eligOkBtn.onclick = oldOk; _eligCancelBtn.onclick = oldCancel; };
   };
   el('backToWelcome').onclick = () => show('welcome');
-  el('toQ1').onclick = () => { if(!S.questions || !S.questions.length){ alert('Could not load questions.json. Place it in the same folder and reload.'); return; } const l=el('list-q1'); l.innerHTML=''; (S.questions||[]).slice(0,18).forEach((q,i)=>l.appendChild(makeQ(q,i+1))); show('q1'); };
+  el('toQ1').onclick = () => { const l=el('list-q1'); l.innerHTML=''; (S.questions||[]).slice(0,18).forEach((q,i)=>l.appendChild(makeQ(q,i+1))); show('q1'); };
   el('backToInstructions').onclick = () => show('instructions');
   el('toQ2').onclick = () => { const l=el('list-q2'); l.innerHTML=''; (S.questions||[]).slice(18,35).forEach((q,i)=>l.appendChild(makeQ(q,19+i))); show('q2'); };
   el('backToQ1').onclick = () => show('q1');
@@ -1121,5 +1110,116 @@ else rec='Excellent! Your understanding of BED is an inspiration for others. Con
     labelScore.textContent = 'SCORE';
   }
 })();
-</script></body>
+</script>
+<style>
+/* PDF v2 scoped styles */
+#pdfReport.pdf-v2 { font-family: Arial, Helvetica, sans-serif; color:#333; }
+#pdfReport.pdf-v2 .page { width: 210mm; min-height: 297mm; padding: 18mm 16mm; box-sizing: border-box; }
+@page { size: A4; margin: 12mm 12mm 14mm 12mm; }
+@media print {
+  body * { visibility: hidden; }
+  #pdfReport, #pdfReport * { visibility: visible; }
+  #pdfReport { position: absolute; left: 0; top: 0; width: 100%; }
+}
+#pdfReport.pdf-v2 .bar { background:#1E90FF; height: 24px; line-height:24px; color:#fff; font-weight:700; letter-spacing:.5px; padding:0 10px; border-radius:4px; }
+#pdfReport.pdf-v2 .title-row { display:grid; grid-template-columns: 1fr 220px; align-items: start; gap: 16px; margin-bottom: 14px; }
+#pdfReport.pdf-v2 .title-left h1 { font-size: 18pt; margin:0 0 6px 0; color:#1E90FF; }
+#pdfReport.pdf-v2 .title-left h2 { font-size: 14pt; margin:0 0 2px 0; font-weight:600; color:#444; }
+#pdfReport.pdf-v2 .title-left .date { font-size: 10pt; color:#666; }
+#pdfReport.pdf-v2 .score-box { border:1px solid #1E90FF; border-radius:8px; padding:10px; text-align:center; }
+#pdfReport.pdf-v2 .score-box .pct { font-size: 28pt; font-weight:800; color:#1E90FF; line-height:1; }
+#pdfReport.pdf-v2 .score-box .raw { font-size: 9pt; color:#444; margin-top:6px; }
+#pdfReport.pdf-v2 .two-col { margin-top: 14px; }
+#pdfReport.pdf-v2 .two-col .bar { margin-bottom:8px; }
+#pdfReport.pdf-v2 .cards { display:grid; grid-template-columns: 1fr 1fr; gap: 10px; }
+#pdfReport.pdf-v2 .card { border:1px solid #cfe6ff; border-radius:8px; padding:10px 12px; }
+#pdfReport.pdf-v2 .kv { display:grid; grid-template-columns: 40% 60%; row-gap:6px; column-gap:10px; font-size:10.5pt; }
+#pdfReport.pdf-v2 .kv .k { color:#555; }
+#pdfReport.pdf-v2 .kv .v { color:#111; font-weight:500; }
+#pdfReport.pdf-v2 .section { margin-top:16px; }
+</style>
+
+
+<script>
+(function(){
+  function Sref(){ return (window.__S || window.S || {}); }
+  function text(n){ return document.createTextNode(n==null?'':String(n)); }
+  function el(tag, cls, html){ const e = document.createElement(tag); if(cls) e.className = cls; if(html!=null) e.innerHTML = html; return e; }
+
+  function safe(v){ return (v==null||v==='') ? '—' : v; }
+
+  function getFormVals(){
+    const g = (id)=>{ const x = document.getElementById(id); return x? x.value.trim():''; };
+    // Try common IDs used in previous builds; fallback to blanks
+    return {
+      tm_name: g('tm_name') || g('name') || g('memberName') || '',
+      tm_email: g('tm_email') || g('email') || g('memberEmail') || '',
+      tm_hotel: g('tm_hotel') || g('hotel') || g('memberHotel') || '',
+      peer_name: g('peer_name') || g('peerName') || '',
+      peer_email: g('peer_email') || g('peerEmail') || '',
+      peer_hotel: g('peer_hotel') || g('peerHotel') || ''
+    };
+  }
+
+  function computeTotals(){
+    const S = Sref();
+    const pct = Math.round((S.totPoints || 0) / (S.maxPoints || 1) * 100);
+    const raw = (S.totPoints || 0), max=(S.maxPoints || 0);
+    return { pct, raw, max };
+  }
+
+  window.buildPdfV2 = function buildPdfV2(){
+    const root = document.getElementById('pdfReport');
+    root.classList.add('pdf-v2');
+    root.innerHTML = '';
+    const page = el('div','page'); root.appendChild(page);
+
+    // Title + score box
+    const titleRow = el('div','title-row');
+    const tl = el('div','title-left');
+    tl.appendChild(el('h1', null, 'BED HOSPITALITY 2.0'));
+    tl.appendChild(el('h2', null, 'ASSESSMENT REPORT'));
+    const d = new Date();
+    tl.appendChild(el('div','date', d.toLocaleDateString()));
+    titleRow.appendChild(tl);
+
+    const totals = computeTotals();
+    const sb = el('div','score-box');
+    sb.appendChild(el('div','pct', totals.pct + '%'));
+    sb.appendChild(el('div','raw', totals.raw + ' of ' + totals.max + ' points'));
+    titleRow.appendChild(sb);
+    page.appendChild(titleRow);
+
+    // Info ribbon + two cards
+    const two = el('div','two-col section');
+    two.appendChild(el('div','bar','TEAM MEMBER &nbsp;&nbsp;|&nbsp;&nbsp; PEER REVIEWER'));
+    const cards = el('div','cards');
+
+    const vals = getFormVals();
+    const c1 = el('div','card');
+    const kv1 = el('div','kv'); c1.appendChild(kv1);
+    [['Name', vals.tm_name], ['Email', vals.tm_email], ['Hotel', vals.tm_hotel]].forEach(([k,v])=>{
+      const kE = el('div','k'); kE.appendChild(text(k)); kv1.appendChild(kE);
+      const vE = el('div','v'); vE.appendChild(text(safe(v))); kv1.appendChild(vE);
+    });
+
+    const c2 = el('div','card');
+    const kv2 = el('div','kv'); c2.appendChild(kv2);
+    [['Name', vals.peer_name], ['Email', vals.peer_email], ['Hotel', vals.peer_hotel]].forEach(([k,v])=>{
+      const kE = el('div','k'); kE.appendChild(text(k)); kv2.appendChild(kE);
+      const vE = el('div','v'); vE.appendChild(text(safe(v))); kv2.appendChild(vE);
+    });
+
+    cards.appendChild(c1); cards.appendChild(c2);
+    two.appendChild(cards);
+    page.appendChild(two);
+  };
+
+  // Wire the existing button to the new builder
+  const btn = document.getElementById('congratsPdf');
+  if(btn){ btn.onclick = () => { buildPdfV2(); window.print(); }; }
+})();
+</script>
+
+</body>
 </html>
