--- a/index.html
+++ b/index.html
@@ -552,7 +552,51 @@ button:disabled{background:#ccc; color:#666; cursor:not-allowed;}
   padding: 6px 10px !important; /* same as .sec-h default */
   margin: 16px 0 8px 0 !important;
 }
-</style></head>
+</style>
+<!-- PDF v2 scoped styles -->
+<style id="pdfv2-styles">
+@media print {
+  body * { visibility: hidden !important; }
+  #pdfReport, #pdfReport * { visibility: visible !important; }
+  #pdfReport { position: static; }
+}
+#pdfReport.pdf-v2{
+  --blue:#1E90FF;
+  --text:#444;
+  --muted:#6b7280;
+  --border:#dbeafe;
+  --h1:20pt; --h2:14pt; --h3:12pt; --body:11pt;
+  print-color-adjust: exact; -webkit-print-color-adjust: exact;
+  font-family: system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+  color:var(--text);
+  padding:16mm 14mm;
+}
+#pdfReport.pdf-v2 .title-grid{display:grid;grid-template-columns:1fr 48mm;gap:10mm;align-items:start;margin-bottom:8mm;}
+#pdfReport.pdf-v2 .brand{color:var(--blue);font-size:var(--h1);font-weight:800;letter-spacing:.2px}
+#pdfReport.pdf-v2 .report-title{font-size:var(--h2);font-weight:700;margin:.8mm 0 0 0}
+#pdfReport.pdf-v2 .date{font-size:var(--body);color:var(--muted);margin-top:1mm}
+#pdfReport.pdf-v2 .scorebox{border:1px solid var(--blue);border-radius:8px;padding:6mm 5mm;text-align:center}
+#pdfReport.pdf-v2 .scorebox .pct{font-size:24pt;font-weight:800;color:#fff;background:var(--blue);border-radius:10px;padding:8px 0;line-height:1;margin-bottom:6px}
+#pdfReport.pdf-v2 .scorebox .raw{font-size:var(--body)}
+
+#pdfReport.pdf-v2 .section-ribbon{position:relative;margin:8mm 0 0}
+#pdfReport.pdf-v2 .section-ribbon .bar{height:8mm;background:var(--blue);border-radius:6px}
+#pdfReport.pdf-v2 .section-ribbon .labels{position:absolute;top:0;left:0;right:0;height:8mm;display:grid;grid-template-columns:1fr 1fr;align-items:center;padding:0 6mm;color:#fff;font-weight:700;letter-spacing:.3px;font-size:11pt}
+
+#pdfReport.pdf-v2 .info-grid{display:grid;grid-template-columns:1fr 1fr;gap:6mm;margin-top:5mm}
+#pdfReport.pdf-v2 .card{border:1px solid var(--border);border-radius:8px;padding:5mm}
+#pdfReport.pdf-v2 .kv{display:grid;grid-template-columns:40% 60%;row-gap:3mm}
+#pdfReport.pdf-v2 .kv .k{color:#6b7280}
+#pdfReport.pdf-v2 .kv .v{color:#111}
+
+#pdfReport.pdf-v2 .overall{margin-top:10mm;display:grid;grid-template-columns:36mm 1fr;gap:8mm}
+#pdfReport.pdf-v2 .overall .label{font-weight:700}
+#pdfReport.pdf-v2 .overall .box{border:1px solid var(--border);border-radius:8px;padding:5mm}
+#pdfReport.pdf-v2 .overall .big{font-size:18pt;font-weight:800}
+#pdfReport.pdf-v2 .overall .muted{color:var(--muted);margin-top:2mm}
+</style>
+
+</head>
 <body>
 <main class="container">
 <h1>BED HOSPITALITY 2.0</h1>
@@ -1111,113 +1155,140 @@ else rec='Excellent! Your understanding of BED is an inspiration for others. Con
   }
 })();
 </script>
-<style>
-/* PDF v2 scoped styles */
-#pdfReport.pdf-v2 { font-family: Arial, Helvetica, sans-serif; color:#333; }
-#pdfReport.pdf-v2 .page { width: 210mm; min-height: 297mm; padding: 18mm 16mm; box-sizing: border-box; }
-@page { size: A4; margin: 12mm 12mm 14mm 12mm; }
-@media print {
-  body * { visibility: hidden; }
-  #pdfReport, #pdfReport * { visibility: visible; }
-  #pdfReport { position: absolute; left: 0; top: 0; width: 100%; }
-}
-#pdfReport.pdf-v2 .bar { background:#1E90FF; height: 24px; line-height:24px; color:#fff; font-weight:700; letter-spacing:.5px; padding:0 10px; border-radius:4px; }
-#pdfReport.pdf-v2 .title-row { display:grid; grid-template-columns: 1fr 220px; align-items: start; gap: 16px; margin-bottom: 14px; }
-#pdfReport.pdf-v2 .title-left h1 { font-size: 18pt; margin:0 0 6px 0; color:#1E90FF; }
-#pdfReport.pdf-v2 .title-left h2 { font-size: 14pt; margin:0 0 2px 0; font-weight:600; color:#444; }
-#pdfReport.pdf-v2 .title-left .date { font-size: 10pt; color:#666; }
-#pdfReport.pdf-v2 .score-box { border:1px solid #1E90FF; border-radius:8px; padding:10px; text-align:center; }
-#pdfReport.pdf-v2 .score-box .pct { font-size: 28pt; font-weight:800; color:#1E90FF; line-height:1; }
-#pdfReport.pdf-v2 .score-box .raw { font-size: 9pt; color:#444; margin-top:6px; }
-#pdfReport.pdf-v2 .two-col { margin-top: 14px; }
-#pdfReport.pdf-v2 .two-col .bar { margin-bottom:8px; }
-#pdfReport.pdf-v2 .cards { display:grid; grid-template-columns: 1fr 1fr; gap: 10px; }
-#pdfReport.pdf-v2 .card { border:1px solid #cfe6ff; border-radius:8px; padding:10px 12px; }
-#pdfReport.pdf-v2 .kv { display:grid; grid-template-columns: 40% 60%; row-gap:6px; column-gap:10px; font-size:10.5pt; }
-#pdfReport.pdf-v2 .kv .k { color:#555; }
-#pdfReport.pdf-v2 .kv .v { color:#111; font-weight:500; }
-#pdfReport.pdf-v2 .section { margin-top:16px; }
-</style>
-
-
-<script>
+<!-- PDF v2 builder and safe questions loader -->
+<script id="pdfv2-script">
 (function(){
-  function Sref(){ return (window.__S || window.S || {}); }
-  function text(n){ return document.createTextNode(n==null?'':String(n)); }
-  function el(tag, cls, html){ const e = document.createElement(tag); if(cls) e.className = cls; if(html!=null) e.innerHTML = html; return e; }
+  async function loadQuestionsJSON(){
+    try{
+      const r = await fetch('./questions.json', {cache:'no-store'});
+      if(!r.ok) throw new Error('HTTP '+r.status);
+      const j = await r.json();
+      window.__QUEST = j;
+      const b = document.getElementById('qjson-banner');
+      if(b) b.remove();
+      console.log('[SAR] Loaded questions.json', j.questions?.length||0);
+      return true;
+    }catch(e){
+      console.warn('[SAR] Could not load questions.json', e);
+      const host = document.querySelector('#content') || document.body;
+      if(!document.getElementById('qjson-banner')){
+        const div = document.createElement('div');
+        div.id = 'qjson-banner';
+        div.style.cssText = 'margin:12px 0;padding:10px 12px;border:1px solid #f2c97d;background:#fff7e6;color:#8a6d3b;border-radius:6px;';
+        div.textContent = 'Could not load questions.json. Please place questions.json in the same folder as this HTML and reload.';
+        host.prepend(div);
+      }
+      return false;
+    }
+  }
+  window.addEventListener('DOMContentLoaded', loadQuestionsJSON, {once:true});
 
-  function safe(v){ return (v==null||v==='') ? '—' : v; }
+  function computeTotalsSafe(){
+    try{
+      if (window.__S && window.__S.totals && typeof window.__S.totals.max === 'number'){
+        const t = window.__S.totals;
+        if(!t.max || t.max < 1){
+          const qn = (window.__QUEST?.questions?.length||35);
+          t.max = qn * 5;
+        }
+        if(typeof t.percent !== 'number' && typeof t.points === 'number'){
+          t.percent = t.max ? Math.round((t.points/t.max)*100) : 0;
+        }
+        return t;
+      }
+    }catch(e){}
+    var answered = 0, points = 0;
+    document.querySelectorAll('input[type=radio][name^="q-"]:checked').forEach(r=>{
+      answered += 1;
+      points += parseInt(r.value||'0',10);
+    });
+    const qn = (window.__QUEST?.questions?.length||35);
+    const max = qn * 5;
+    const pct = Math.round((points/max)*100);
+    return {points: points, max: max, percent: isFinite(pct)?pct:0};
+  }
 
-  function getFormVals(){
-    const g = (id)=>{ const x = document.getElementById(id); return x? x.value.trim():''; };
-    // Try common IDs used in previous builds; fallback to blanks
+  function getField(ids){
+    for(const id of ids){
+      const el = document.getElementById(id);
+      if(el && 'value' in el) return (el.value||'').trim();
+    }
+    return '';
+  }
+  function collectForm(){
     return {
-      tm_name: g('tm_name') || g('name') || g('memberName') || '',
-      tm_email: g('tm_email') || g('email') || g('memberEmail') || '',
-      tm_hotel: g('tm_hotel') || g('hotel') || g('memberHotel') || '',
-      peer_name: g('peer_name') || g('peerName') || '',
-      peer_email: g('peer_email') || g('peerEmail') || '',
-      peer_hotel: g('peer_hotel') || g('peerHotel') || ''
+      member: {
+        name: getField(['name','yourName','tm_name','member_name']),
+        email: getField(['email','yourEmail','tm_email','member_email']),
+        hotel: getField(['location','yourLocation','tm_hotel','member_hotel'])
+      },
+      peer: {
+        name: getField(['peerName','name_peer','peer_name']),
+        email: getField(['peerEmail','email_peer','peer_email']),
+        hotel: getField(['peerLocation','peer_location','peer_hotel'])
+      }
     };
   }
 
-  function computeTotals(){
-    const S = Sref();
-    const pct = Math.round((S.totPoints || 0) / (S.maxPoints || 1) * 100);
-    const raw = (S.totPoints || 0), max=(S.maxPoints || 0);
-    return { pct, raw, max };
+  function buildPdfV2(){
+    const totals = computeTotalsSafe();
+    const form = collectForm();
+    const host = document.getElementById('pdfReport');
+    if(!host) return;
+    host.className = 'pdf-v2';
+    host.innerHTML = ''+
+    '<div class="title-grid">'+
+      '<div>'+
+        '<div class="brand">BED HOSPITALITY 2.0</div>'+
+        '<div class="report-title">ASSESSMENT REPORT</div>'+
+        '<div class="date">'+new Date().toLocaleDateString()+'</div>'+
+      '</div>'+
+      '<div class="scorebox">'+
+        '<div class="pct">'+(isFinite(totals.percent)?totals.percent:0)+'%</div>'+
+        '<div class="raw">'+(totals.points||0)+' of '+(totals.max||((window.__QUEST?.questions?.length||35)*5))+' points</div>'+
+      '</div>'+
+    '</div>'+
+
+    '<div class="section-ribbon">'+
+      '<div class="bar"></div>'+
+      '<div class="labels"><div>TEAM MEMBER</div><div style="text-align:right">PEER REVIEWER</div></div>'+
+    '</div>'+
+
+    '<div class="info-grid">'+
+      '<div class="card">'+
+        '<div class="kv">'+
+          '<div class="k">Name</div><div class="v">'+(form.member.name||'—')+'</div>'+
+          '<div class="k">Email</div><div class="v">'+(form.member.email||'—')+'</div>'+
+          '<div class="k">Hotel</div><div class="v">'+(form.member.hotel||'—')+'</div>'+
+        '</div>'+
+      '</div>'+
+      '<div class="card">'+
+        '<div class="kv">'+
+          '<div class="k">Name</div><div class="v">'+(form.peer.name||'—')+'</div>'+
+          '<div class="k">Email</div><div class="v">'+(form.peer.email||'—')+'</div>'+
+          '<div class="k">Hotel</div><div class="v">'+(form.peer.hotel||'—')+'</div>'+
+        '</div>'+
+      '</div>'+
+    '</div>'+
+
+    '<div class="overall">'+
+      '<div class="label">OVERALL</div>'+
+      '<div class="box">'+
+        '<div class="big">'+(isFinite(totals.percent)?totals.percent:0)+'%</div>'+
+        '<div class="muted">Total: '+(totals.points||0)+' / '+(totals.max||((window.__QUEST?.questions?.length||35)*5))+' points</div>'+
+      '</div>'+
+    '</div>';
   }
 
-  window.buildPdfV2 = function buildPdfV2(){
-    const root = document.getElementById('pdfReport');
-    root.classList.add('pdf-v2');
-    root.innerHTML = '';
-    const page = el('div','page'); root.appendChild(page);
-
-    // Title + score box
-    const titleRow = el('div','title-row');
-    const tl = el('div','title-left');
-    tl.appendChild(el('h1', null, 'BED HOSPITALITY 2.0'));
-    tl.appendChild(el('h2', null, 'ASSESSMENT REPORT'));
-    const d = new Date();
-    tl.appendChild(el('div','date', d.toLocaleDateString()));
-    titleRow.appendChild(tl);
-
-    const totals = computeTotals();
-    const sb = el('div','score-box');
-    sb.appendChild(el('div','pct', totals.pct + '%'));
-    sb.appendChild(el('div','raw', totals.raw + ' of ' + totals.max + ' points'));
-    titleRow.appendChild(sb);
-    page.appendChild(titleRow);
-
-    // Info ribbon + two cards
-    const two = el('div','two-col section');
-    two.appendChild(el('div','bar','TEAM MEMBER &nbsp;&nbsp;|&nbsp;&nbsp; PEER REVIEWER'));
-    const cards = el('div','cards');
-
-    const vals = getFormVals();
-    const c1 = el('div','card');
-    const kv1 = el('div','kv'); c1.appendChild(kv1);
-    [['Name', vals.tm_name], ['Email', vals.tm_email], ['Hotel', vals.tm_hotel]].forEach(([k,v])=>{
-      const kE = el('div','k'); kE.appendChild(text(k)); kv1.appendChild(kE);
-      const vE = el('div','v'); vE.appendChild(text(safe(v))); kv1.appendChild(vE);
-    });
-
-    const c2 = el('div','card');
-    const kv2 = el('div','kv'); c2.appendChild(kv2);
-    [['Name', vals.peer_name], ['Email', vals.peer_email], ['Hotel', vals.peer_hotel]].forEach(([k,v])=>{
-      const kE = el('div','k'); kE.appendChild(text(k)); kv2.appendChild(kE);
-      const vE = el('div','v'); vE.appendChild(text(safe(v))); kv2.appendChild(vE);
-    });
-
-    cards.appendChild(c1); cards.appendChild(c2);
-    two.appendChild(cards);
-    page.appendChild(two);
-  };
-
-  // Wire the existing button to the new builder
-  const btn = document.getElementById('congratsPdf');
-  if(btn){ btn.onclick = () => { buildPdfV2(); window.print(); }; }
+  function hookPdfButton(){
+    const btn = document.querySelector('#congratsPdf, .pdf-btn, button#print, button#createPdf');
+    if(!btn) return;
+    btn.addEventListener('click', function(ev){
+      try{ buildPdfV2(); }catch(e){ console.error('buildPdfV2 failed', e); }
+      setTimeout(function(){ window.print(); }, 50);
+    }, true);
+  }
+  window.addEventListener('DOMContentLoaded', hookPdfButton);
 })();
 </script>
 
